style: improve note app UI, fix layout alignment and enhance edit mode styling

--- a/style.css
+++ b/style.css
@@ -51,3 +51,168 @@ body{
     height:50px;
     margin-top: 20px;
 }
+
+
+
+.noteContainer{
+    background-color:#334155;
+    max-width:600px;
+    min-width: 300px;
+    display:flex;
+    flex-direction:column;
+    gap:20px;
+    margin-bottom: 30px;
+}
+
+.noteContainer:hover{
+    background-color: #475569;
+}
+
+#buttonContainer{
+    display:flex;
+    justify-content:space-evenly;
+    gap:10px;
+    margin-bottom: 20px;
+}
+
+#editbtn{
+    background-color: #EF4444;
+    color:black;
+    width:80px;
+    height:40px;
+}
+
+#Deletebtn{
+    background-color: #EF4444;
+    color:black;
+    width:80px;
+    height:40px;
+}
+
+#contentContainer{
+    display:block;
+}
+
+
+#titleValue{
+    max-width: 350px;
+    max-height: 60px;
+    margin-top: 10px;
+    padding: 20px;
+    color: #94A3B8;
+}
+
+#DescriotionValue{
+    max-width: 350px;
+    min-width: 200px;
+    margin-bottom: 20px;
+    padding: 20px;
+    color: #94A3B8;
+}
+
+#input{
+    height:25px;
+    width:250px;
+}
+
+#textarea{
+    max-height: 300px;
+    min-height: 80px;
+    max-width: 250px;
+    min-width: 250px;
+}
+
+#newContentContainer{
+    display:flex;
+    justify-content:center ;
+    align-items: center;
+    flex-direction: column;
+    gap:10px;
+}
+
+#savebtn{
+    width: 80px;
+    height: 50px;
+    background-color: #EF4444;
+    color: black;
+}
+
+#cancelbtn{
+    width: 80px;
+    height: 50px;
+    background-color: #EF4444;
+    color: black;
+}
+
+#newEditButtons{
+    display:flex;
+    justify-content: center;
+    gap:10px;
+    margin-bottom: 20px;
+}
+
+#newEditbtn{
+    background-color: #EF4444;
+    color: black;
+    width: 80px;
+    height: 40px;
+}
+
+#newDeletebtn{
+    background-color: #EF4444;
+    color: black;
+    width: 80px;
+    height: 40px;
+}
+
+#newEditButtonContainer{
+    display:flex;
+    justify-content: center;
+    gap:10px;
+    margin-bottom:20px;
+}
+
+#saveInput{
+    max-width: 350px;
+    max-height: 60px;
+    padding: 20px;
+    color: #94A3B8;
+}
+
+#saveTextarea{
+    max-width: 350px;
+    max-height: 60px;
+    padding: 20px;
+    color: #94A3B8;
+}
+
+#oldEditbtn{
+    background-color: #EF4444;
+    color: black;
+    width: 80px;
+    height: 40px;
+}
+
+#oldDeletebtn{
+    background-color: #EF4444;
+    color: black;
+    width: 80px;
+    height: 40px;
+}
+
+#oldTitle{
+    color: #94A3B8;
+    padding:20px;
+}
+
+#oldDiscription{
+    color: #94A3B8;
+    padding:20px;
+}
+
+#oldbtnContainer{
+     display:flex;
+     justify-content: center;
+     padding-bottom: 20px;
+     gap:10px;
+}
